Fix issue computer choice in the final round not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,6 @@
   
   /* Header Styles */
   .header {
-    background-color: #3b4a69;
     color: #fff;
     padding: 20px 0;
     width: 100%;
